--- a/keyboard_mapping_t.json
+++ b/keyboard_mapping_t.json
@@ -1,89 +1,89 @@
 {
-  "a": "sounds/a.wav",
-  "b": "sounds/a.wav",
-  "c": "sounds/a.wav",
-  "d": "sounds/a.wav",
-  "e": "sounds/a.wav",
-  "f": "sounds/a.wav",
-  "g": "sounds/a.wav",
-  "h": "sounds/a.wav",
-  "i": "sounds/a.wav",
-  "j": "sounds/a.wav",
-  "k": "sounds/a.wav",
-  "l": "sounds/a.wav",
-  "m": "sounds/a.wav",
-  "n": "sounds/a.wav",
-  "o": "sounds/a.wav",
-  "p": "sounds/a.wav",
-  "q": "sounds/a.wav",
-  "r": "sounds/a.wav",
-  "s": "sounds/a.wav",
-  "t": "sounds/a.wav",
-  "u": "sounds/a.wav",
-  "v": "sounds/a.wav",
-  "w": "sounds/a.wav",
-  "x": "sounds/a.wav",
-  "y": "sounds/a.wav",
-  "z": "sounds/a.wav",
-  "0": "sounds/a.wav",
-  "1": "sounds/a.wav",
-  "2": "sounds/a.wav",
-  "3": "sounds/a.wav",
-  "4": "sounds/a.wav",
-  "5": "sounds/a.wav",
-  "6": "sounds/a.wav",
-  "7": "sounds/a.wav",
-  "8": "sounds/a.wav",
-  "9": "sounds/a.wav",
-  "space": "sounds/a.wav",
-  "backspace": "sounds/a.wav",
-  "tab": "sounds/a.wav",
-  "enter": "sounds/a.wav",
-  "shift": "sounds/a.wav",
-  "shift_r": "sounds/a.wav",
-  "ctrl": "sounds/a.wav",
-  "ctrl_r": "sounds/a.wav",
-  "alt": "sounds/a.wav",
-  "alt_r": "sounds/a.wav",
-  "cmd": "sounds/a.wav",
-  "cmd_r": "sounds/a.wav",
-  "caps_lock": "sounds/a.wav",
-  "esc": "sounds/a.wav",
-  "f1": "sounds/a.wav",
-  "f2": "sounds/a.wav",
-  "f3": "sounds/a.wav",
-  "f4": "sounds/a.wav",
-  "f5": "sounds/a.wav",
-  "f6": "sounds/a.wav",
-  "f7": "sounds/a.wav",
-  "f8": "sounds/a.wav",
-  "f9": "sounds/a.wav",
-  "f10": "sounds/a.wav",
-  "f11": "sounds/a.wav",
-  "f12": "sounds/a.wav",
-  "print_screen": "sounds/a.wav",
-  "scroll_lock": "sounds/a.wav",
-  "pause": "sounds/a.wav",
-  "insert": "sounds/a.wav",
-  "home": "sounds/a.wav",
-  "page_up": "sounds/a.wav",
-  "delete": "sounds/a.wav",
-  "end": "sounds/a.wav",
-  "page_down": "sounds/a.wav",
-  "right": "sounds/a.wav",
-  "left": "sounds/a.wav",
-  "down": "sounds/a.wav",
-  "up": "sounds/a.wav",
-  "num_lock": "sounds/a.wav",
-  "`": "sounds/a.wav",
-  "-": "sounds/a.wav",
-  "=": "sounds/a.wav",
-  "[": "sounds/a.wav",
-  "]": "sounds/a.wav",
-  "\\": "sounds/a.wav",
-  ";": "sounds/a.wav",
-  "'": "sounds/a.wav",
-  ",": "sounds/a.wav",
-  ".": "sounds/a.wav",
-  "/": "sounds/a.wav"
+  "a": "sounds/a.mp3",
+  "b": "sounds/a.mp3",
+  "c": "sounds/a.mp3",
+  "d": "sounds/a.mp3",
+  "e": "sounds/a.mp3",
+  "f": "sounds/a.mp3",
+  "g": "sounds/a.mp3",
+  "h": "sounds/a.mp3",
+  "i": "sounds/a.mp3",
+  "j": "sounds/a.mp3",
+  "k": "sounds/a.mp3",
+  "l": "sounds/a.mp3",
+  "m": "sounds/a.mp3",
+  "n": "sounds/a.mp3",
+  "o": "sounds/a.mp3",
+  "p": "sounds/a.mp3",
+  "q": "sounds/a.mp3",
+  "r": "sounds/a.mp3",
+  "s": "sounds/a.mp3",
+  "t": "sounds/a.mp3",
+  "u": "sounds/a.mp3",
+  "v": "sounds/a.mp3",
+  "w": "sounds/a.mp3",
+  "x": "sounds/a.mp3",
+  "y": "sounds/a.mp3",
+  "z": "sounds/a.mp3",
+  "0": "sounds/a.mp3",
+  "1": "sounds/a.mp3",
+  "2": "sounds/a.mp3",
+  "3": "sounds/a.mp3",
+  "4": "sounds/a.mp3",
+  "5": "sounds/a.mp3",
+  "6": "sounds/a.mp3",
+  "7": "sounds/a.mp3",
+  "8": "sounds/a.mp3",
+  "9": "sounds/a.mp3",
+  "space": "sounds/a.mp3",
+  "backspace": "sounds/a.mp3",
+  "tab": "sounds/a.mp3",
+  "enter": "sounds/a.mp3",
+  "shift": "sounds/a.mp3",
+  "shift_r": "sounds/a.mp3",
+  "ctrl": "sounds/a.mp3",
+  "ctrl_r": "sounds/a.mp3",
+  "alt": "sounds/a.mp3",
+  "alt_r": "sounds/a.mp3",
+  "cmd": "sounds/a.mp3",
+  "cmd_r": "sounds/a.mp3",
+  "caps_lock": "sounds/a.mp3",
+  "esc": "sounds/a.mp3",
+  "f1": "sounds/a.mp3",
+  "f2": "sounds/a.mp3",
+  "f3": "sounds/a.mp3",
+  "f4": "sounds/a.mp3",
+  "f5": "sounds/a.mp3",
+  "f6": "sounds/a.mp3",
+  "f7": "sounds/a.mp3",
+  "f8": "sounds/a.mp3",
+  "f9": "sounds/a.mp3",
+  "f10": "sounds/a.mp3",
+  "f11": "sounds/a.mp3",
+  "f12": "sounds/a.mp3",
+  "print_screen": "sounds/a.mp3",
+  "scroll_lock": "sounds/a.mp3",
+  "pause": "sounds/a.mp3",
+  "insert": "sounds/a.mp3",
+  "home": "sounds/a.mp3",
+  "page_up": "sounds/a.mp3",
+  "delete": "sounds/a.mp3",
+  "end": "sounds/a.mp3",
+  "page_down": "sounds/a.mp3",
+  "right": "sounds/a.mp3",
+  "left": "sounds/a.mp3",
+  "down": "sounds/a.mp3",
+  "up": "sounds/a.mp3",
+  "num_lock": "sounds/a.mp3",
+  "`": "sounds/a.mp3",
+  "-": "sounds/a.mp3",
+  "=": "sounds/a.mp3",
+  "[": "sounds/a.mp3",
+  "]": "sounds/a.mp3",
+  "\\": "sounds/a.mp3",
+  ";": "sounds/a.mp3",
+  "'": "sounds/a.mp3",
+  ",": "sounds/a.mp3",
+  ".": "sounds/a.mp3",
+  "/": "sounds/a.mp3"
 }
